Fixed the position of form labels on mobile devices

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -417,6 +417,7 @@ header
 		{
 			// Libellé du champ.
 			color: $text-color;
+			display: inline-block;
 
 			> span
 			{
